--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "fs-extra": "^7.0.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
+  },
+  "devDependencies": {
+    "bottleneck": "^2.19.5",
+    "lru-cache": "^10.0.0"
   }
 }
